objects/ASI_GiftBox_Inventory_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_GiftBox_Item_Available_Quantity__c</fullName>
        <formula>ASI_GiftBox_Item_Received_Quantity__c +  ASI_GiftBox_Item_Transfer_Quantity__c  -  ASI_GiftBox_Item_Requested_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Item_Id__c</fullName>
        <label>Gift Box Item</label>
        <referenceTo>ASI_GiftBox_Inventory_Master__c</referenceTo>
        <relationshipName>Gift_Box_Item_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Item_Received_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Received Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Item_Requested_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Requested Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Item_Transfer_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transfer Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Item_Warehouse__c</fullName>
        <label>Warehouse</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Gift Box Inventory Detail</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Gift Box Inventory Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Box Inventory Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_GiftBox_VN_Item_Detail</fullName>
        <active>true</active>
        <label>ASI GiftBox VN Item Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>